[package]
name = "rsgraph"
version = "0.1.1"
authors = ["komron <komron_aripov@cdl.ch>"]
edition = "2018"

description = "telegra.ph API bindings in Rust"
readme = "README.md"
license = "MIT"
repository = "https://github.com/karipov/rsgraph.git"
homepage = "https://github.com/karipov/rsgraph"

[dependencies]
